# distokoloshe

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICES  PLAN.md  README.md  compose.yml  idea.txt  package.json
.github/workflows/: build-desktop.yml
api/: Dockerfile
api/src/: db.ts  events.ts  index.ts  livekit.ts  timers.ts  whispers.ts
api/src/middleware/: auth.ts
api/src/routes/: auth.ts  events.ts  music.ts  punishments.ts  rooms.ts  users.ts  votes.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  pipe.rs
apps/music/: .dockerignore  Dockerfile  api.py  bot.py  ephemeral.py  main.py  player.py  requirements.txt  stations.py  ytdl-resolve.js
apps/server/: .dockerignore  package.json
apps/web/: Dockerfile  entrypoint.sh  index.html  nginx.conf  nginx.tls.conf  package.json  tsconfig.json  vite.config.ts
infra/livekit/: Dockerfile  entrypoint.sh  livekit.yaml
infra/scripts/: init-certs.sh  init.sh  renew-cert.sh
livekit/: Dockerfile
music/: Dockerfile  api.py  bot.py  main.py  package-lock.json  package.json  player.py  requirements.txt  stations.py  tsconfig.json
music/src/: api.ts  bot.ts  index.ts  player.ts  stations.ts
scripts/: init-certs.sh  init.sh
web/: Dockerfile  STYLE_GUIDE.md  entrypoint.sh  index.html  nginx.conf  nginx.tls.conf  package.json  vite.config.ts
web/src/: App.tsx
(+46 files in other folders)
